force-app/main/default/objects/Funnel_Addition__c/Funnel_Addition__c.object-meta.xml
<CustomObject>
    <label>Funnel Addition</label>
    <nameField>
        <displayFormat>FA-{0000000}</displayFormat>
        <label>Funnel Addition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funnel Additions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>