force-app/main/default/objects/Funnel_Addition__c/fields/Amount_at_Start__c.field-meta.xml
<CustomField>
    <fullName>Amount_at_Start__c</fullName>
    <label>Amount at Start</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>