force-app/main/default/objects/Funnel_Addition__c/fields/Close_Date_at_End__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_at_End__c</fullName>
    <label>Close Date at End</label>
    <type>Date</type>
</CustomField>