force-app/main/default/objects/Funnel_Addition__c/fields/Current_Amount_FF__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount_FF__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Amount FF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>