force-app/main/default/objects/Funnel_Addition__c/fields/Current_Period__c.field-meta.xml
<CustomField>
    <fullName>Current_Period__c</fullName>
    <label>Current Period</label>
    <length>4</length>
    <type>Text</type>
</CustomField>