force-app/main/default/objects/Funnel_Addition__c/fields/Funnel_Addition_Target__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Addition_Target__c</fullName>
    <label>Funnel Addition Target</label>
    <referenceTo>Funnel_Addition_Target__c</referenceTo>
    <relationshipLabel>Funnel Additions</relationshipLabel>
    <relationshipName>Funnel_Additions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>