force-app/main/default/objects/Funnel_Addition__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Funnel Additions</relationshipLabel>
    <relationshipName>Funnel_Additions</relationshipName>
    <type>Lookup</type>
</CustomField>