force-app/main/default/objects/Funnel_Addition__c/fields/Probability_At_End__c.field-meta.xml
<CustomField>
    <fullName>Probability_At_End__c</fullName>
    <label>Probability At End</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>